# x2udp

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindIIO.cmake  FindKernelHeaders.cmake  Findlibconfig.cmake  Findlibdaemon.cmake  x2udpConfig.cmake.in
etc/: can2udp  iio2udp
include/: can2udp.h  iio2udp.h
src/: can2udp.c  iio2udp.c
